[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Alkhemikal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/party-icons/main_character_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/FullPartyMemberUIView.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="FullPartyMemberStatInfo" type="ColorRect"]
margin_right = 300.0
margin_bottom = 553.0
rect_min_size = Vector2( 300, 0 )
color = Color( 0.164706, 0.133333, 0.133333, 1 )
script = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
margin_left = 18.3829
margin_top = 6.94247
margin_right = 146.383
margin_bottom = 141.942
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 47.4266
margin_top = 509.25
margin_right = 239.427
margin_bottom = 541.25
custom_fonts/font = SubResource( 1 )
text = "Mr. Protagonist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 168.7
margin_top = 10.1012
margin_right = 261.7
margin_bottom = 42.1012
custom_fonts/font = SubResource( 2 )
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatContainer" type="VBoxContainer" parent="."]
margin_left = 21.0
margin_top = 159.0
margin_right = 258.0
margin_bottom = 482.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealth" type="Label" parent="StatContainer"]
margin_right = 237.0
margin_bottom = 20.0
text = "MaxHealth"

[node name="MaxMana" type="Label" parent="StatContainer"]
margin_top = 24.0
margin_right = 237.0
margin_bottom = 44.0
text = "MaxMana"

[node name="MaxDefense" type="Label" parent="StatContainer"]
margin_top = 48.0
margin_right = 237.0
margin_bottom = 91.0
text = "MaxDefense
"

[node name="ExperienceToNext" type="Label" parent="StatContainer"]
margin_top = 95.0
margin_right = 237.0
margin_bottom = 138.0
text = "ExperienceToNext
"

[node name="StatContainer" type="VBoxContainer" parent="StatContainer"]
margin_top = 142.0
margin_right = 237.0
margin_bottom = 142.0
